samples/_failures_safe/1761425246_804c73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3b0975b.c: In function ‘main’:
./samples/SAFE/__tmp_b3b0975b.c:148:5: error: expected declaration or statement at end of input
  148 |     if (!read_input(&input)) {
      |     ^~
./samples/SAFE/__tmp_b3b0975b.c:148:5: error: expected declaration or statement at end of input
